# fa-c002-lab-eu

./: .gitignore  .sqlfluff  .sqlfluffignore  CLAUDE.md  NEXT_STEPS.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: dbt_ci.yml
docs/: 00_setup_guide.md  01_sample_data.md  02_first_model.md  03_next_steps.md  quick_start.md  snowflake_setup.md
docs/goal/: midcourse_test_criteria.md
docs/implementation/: IMPLEMENTATION_PLAN.md
docs/learning/: 00_overview.md  01_project_setup.md  02_snowflake_basics.md  03_dbt_fundamentals.md  04_data_modeling.md  05_professional_practices.md  README.md
docs/midtest/: COURSE_ALIGNED.md  DEMO_READY.md  ERD_STAR_SCHEMA.md  MIDTEST_QUICK_GUIDE.md  PROGRESS.md
docs/planning/: api_validation_results.md  data_strategy.md
my_dbt_project/macros/: calculate_ctr.sql
my_dbt_project/models/01_staging/: .gitkeep  _sources.yml  schema.yml  sources.yml  stg_adjust_midtest.sql  stg_admob_midtest.sql  stg_customers.sql  stg_customers.yml
my_dbt_project/models/02_intermediate/: .gitkeep  int_app_daily_metrics.sql  schema.yml
scripts/: check_data.py  collect_adjust.py  collect_adjust_midtest.py  collect_adjust_realtime.py  collect_admob.py  collect_admob_midtest.py
scripts/setup/: create_raw_midtest_schema.py  create_raw_schema.py
scripts/utils/: __init__.py  snowflake_client.py
scripts/validation/: README.md  compare_apps_admob_adjust.py  test_adjust_capabilities.py  test_api_capabilities.py  test_hour_dimension.py
sql/: init_postgres.sql
sql/setup/: create_raw_tables.sql
(+5 files in other folders)
