[project]
name = "fa-c002-lab"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "dbt-core>=1.10.13",
    "dbt-snowflake>=1.10.2",
    "google-auth>=2.23.0",
    "google-auth-oauthlib>=1.1.0",
    "google-api-python-client>=2.100.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
]
